--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 <body>
       <div id="app" class="container">
        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-faded">
-           <a class="navbar-brand" href="#">Home</a>
+           <a class="navbar-brand" href="#">
+             <img src="apple-touch-icon.png" width="50" height="50" alt="">
+           </a>
            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
            </button>
@@ -55,7 +57,7 @@
        </nav>
    </div>
     <div>
-        <img class="image" src="edStand@raja.jpg" alt="edStand" width= "70%">
+        <img class="image" src="edStand@raja.jpg" alt="edStand" width= "70%" height="70%">
     </div>
 	<div id="app" class="container">
     <nav  id="footer" class="navbar navbar-expand-lg navbar-light bg-light bd-footer text-muted">
@@ -65,24 +67,20 @@
                                     <a class="nav-link" href="#">care@edStand.com <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Terms</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Privacy</a>
+                                    <a class="nav-link" href="#">Terms  Privacy</a>
                                 </li>
 
                             </ul>
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
+                            <div class="">
                                 <a href="#"><i id="social-fb" class="fab fa-facebook-f social" aria-hidden="true"></i>
-                            </li>
-                            <li class="nav-item">
+
+
                                 <a href="#"><i id="social-tw" class="fab fa-twitter social" aria-hidden="true"></i>
-                            </li>
-                            <li class="nav-item">
+
+
                                 <a href="#"><i id="social-gp" class="fab fa-google-plus social" aria-hidden="true"></i>
-                            </li>
-                        </ul>
+
+                        </div>
 
   </nav>
   	</div>
