--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
            <div id="navbarNavDropdown" class="navbar-collapse collapse">
                <ul class="navbar-nav mr-auto">
                    <li class="nav-item active">
-                       <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+                       <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
                    </li>
                    <li class="nav-item">
                        <a class="nav-link" href="#">Support</a>
@@ -50,14 +50,14 @@
                        <a class="nav-link" href="#"><i class="fas fa-sign-in-alt"></i>Login</a>
                    </li>
                    <li class="nav-item">
-                       <a class="nav-link" href="#"><i class="fas fa-user-plus"></i>Register</a>
+                       <a class="nav-link" href="#"><i class="fas fa-user-plus"></i>SignUp</a>
                    </li>
                </ul>
            </div>
        </nav>
    </div>
     <div>
-        <img class="image" src="edStand@raja.jpg" alt="edStand" width= "70%" height="70%">
+        <img class="image" src="edStand@raja.jpg" alt="edStand" width= "100%" height="70%">
     </div>
 	<div id="app" class="container">
     <nav  id="footer" class="navbar navbar-expand-lg navbar-light bg-light bd-footer text-muted">
